--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint",
-		"lint:fix": "next lint --fix",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
 		"lint:inspector": "config-inspector --config eslint.config.ts",
 		"fmt:ci": "biome ci *",
 		"fmt:fix": "biome check --write *",
