chore: add workflow dispatch on cui

--- a/.github/workflows/github-actions-lint.yaml
+++ b/.github/workflows/github-actions-lint.yaml
@@ -5,6 +5,7 @@ on:
     paths:
       - .github/workflows/*.yaml
       - .github/workflows/*.yml
+  workflow_dispatch:
 
 jobs:
   github-actions-lint:
