--- a/.github/workflows/update-submodule.yaml
+++ b/.github/workflows/update-submodule.yaml
@@ -7,4 +7,5 @@ on:
 
 jobs:
   update-submodules:
+    permissions: {}
     uses: s-hirano-ist/s-templates/.github/workflows/update-submodule.yaml@main
