--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
 		"test": "vitest",
 		"test:e2e": "playwright test",
 		"test:storybook": "test-storybook --coverage --coverageDirectory .storybook-coverage",
-		"prisma:generate": "prisma generate --no-engine --schema=./s-schema/schema.prisma",
-		"prisma:migrate": "prisma migrate dev --schema=./s-schema/schema.prisma",
-		"prisma:deploy": "prisma migrate deploy --schema=./s-schema/schema.prisma",
-		"prisma:studio": "prisma studio  --schema=./s-schema/schema.prisma",
-		"postinstall": "pnpm prisma:generate  --schema=./s-schema/schema.prisma",
+		"drizzle:generate": "drizzle-kit generate",
+		"drizzle:migrate": "drizzle-kit migrate",
+		"drizzle:studio": "drizzle-kit studio",
+		"drizzle:push": "drizzle-kit push",
+		"postinstall": "echo 'No postinstall needed for Drizzle'",
 		"commit": "cz",
 		"storybook": "storybook dev -p 6006",
 		"storybook:build": "storybook build -o .storybook-static",
@@ -35,8 +35,6 @@
 	"dependencies": {
 		"@hookform/resolvers": "5.2.1",
 		"@next/third-parties": "15.4.4",
-		"@prisma/client": "6.13.0",
-		"@prisma/extension-accelerate": "1.3.0",
 		"@radix-ui/react-dialog": "1.1.14",
 		"@radix-ui/react-dropdown-menu": "2.1.15",
 		"@radix-ui/react-icons": "1.3.2",
@@ -65,7 +63,6 @@
 		"next-themes": "0.4.6",
 		"next-view-transitions": "0.3.4",
 		"pino": "9.7.0",
-		"prisma": "6.13.0",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"rehype-slug": "6.0.0",
@@ -114,6 +111,7 @@
 		"@testing-library/react": "16.3.0",
 		"@testing-library/user-event": "14.6.1",
 		"@types/node": "22.17.0",
+		"@types/pg": "8.15.5",
 		"@types/react": "19.1.8",
 		"@types/react-dom": "19.1.6",
 		"@types/uuid": "10.0.0",
@@ -124,6 +122,8 @@
 		"cz-conventional-changelog": "3.3.0",
 		"depcheck": "1.4.7",
 		"dotenv": "17.2.1",
+		"drizzle-kit": "0.31.4",
+		"drizzle-orm": "0.44.4",
 		"eslint": "9.32.0",
 		"eslint-config-next": "15.4.4",
 		"eslint-plugin-boundaries": "5.0.1",
@@ -136,6 +136,7 @@
 		"license-checker": "25.0.1",
 		"playwright": "1.54.1",
 		"postcss": "8.5.6",
+		"postgres": "3.4.7",
 		"rehype": "13.0.2",
 		"rehype-external-links": "3.0.0",
 		"rehype-highlight": "7.0.2",
