--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
 		"@prisma/extension-accelerate": "1.3.0",
 		"@radix-ui/react-icons": "1.3.2",
 		"@sentry/nextjs": "9.43.0",
-		"@shikijs/rehype": "3.8.1",
 		"@t3-oss/env-nextjs": "0.13.8",
 		"@tailwindcss/typography": "0.5.16",
 		"@tanstack/react-query": "5.83.0",
@@ -47,8 +46,6 @@
 		"@vercel/speed-insights": "1.2.0",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
-		"html-react-parser": "5.2.6",
-		"isomorphic-dompurify": "2.26.0",
 		"jsdom": "26.1.0",
 		"lucide-react": "0.534.0",
 		"minio": "8.0.5",
@@ -62,15 +59,13 @@
 		"radix-ui": "1.4.2",
 		"react": "19.1.1",
 		"react-dom": "19.1.1",
-		"rehype-slug": "6.0.0",
-		"remark-breaks": "4.0.0",
-		"remark-toc": "9.0.0",
+		"react-markdown": "10.1.0",
+		"react-syntax-highlighter": "15.6.1",
 		"server-only": "0.0.1",
 		"sharp": "0.34.3",
 		"sonner": "2.0.6",
 		"tailwind-merge": "3.3.1",
 		"tailwindcss-animate": "1.0.7",
-		"unified": "11.0.5",
 		"use-debounce": "10.0.5",
 		"uuid": "11.1.0",
 		"vaul": "1.1.2",
@@ -110,6 +105,7 @@
 		"@types/node": "22.17.0",
 		"@types/react": "19.1.9",
 		"@types/react-dom": "19.1.7",
+		"@types/react-syntax-highlighter": "15.5.13",
 		"@types/uuid": "10.0.0",
 		"@vitest/browser": "3.2.4",
 		"@vitest/coverage-v8": "3.2.4",
@@ -130,13 +126,7 @@
 		"license-checker": "25.0.1",
 		"playwright": "1.54.1",
 		"postcss": "8.5.6",
-		"rehype": "13.0.2",
-		"rehype-external-links": "3.0.0",
-		"rehype-highlight": "7.0.2",
-		"rehype-stringify": "10.0.1",
 		"remark-gfm": "4.0.1",
-		"remark-parse": "11.0.0",
-		"remark-rehype": "11.1.2",
 		"storybook": "9.0.18",
 		"storybook-dark-mode": "4.0.2",
 		"tailwindcss": "4.1.11",
