--- a/package.json
+++ b/package.json
@@ -26,14 +26,11 @@
 		"storybook:build": "storybook build -o .storybook-static",
 		"license:summary": "license-checker --summary> library-license.txt",
 		"security": "pnpm audit",
-		"actionlint": "actionlint",
-		"ghalint": "ghalint run",
 		"depcheck": "depcheck",
-		"analyze": "ANALYZE=true pnpm build"
+		"analyze": "ANALYZE=true pnpm build",
+		"knip": "knip"
 	},
 	"dependencies": {
-		"@hookform/resolvers": "5.2.1",
-		"@next/third-parties": "15.4.5",
 		"@prisma/client": "6.13.0",
 		"@prisma/extension-accelerate": "1.3.0",
 		"@radix-ui/react-icons": "1.3.2",
@@ -72,7 +69,6 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.1.3",
 		"@chromatic-com/storybook": "4.0.1",
-		"@eslint/compat": "1.3.1",
 		"@eslint/config-inspector": "1.1.0",
 		"@eslint/eslintrc": "3.3.1",
 		"@next/bundle-analyzer": "15.4.5",
@@ -118,6 +114,7 @@
 		"eslint-plugin-tailwindcss": "3.18.2",
 		"globals": "16.3.0",
 		"jsdom": "26.1.0",
+		"knip": "5.62.0",
 		"license-checker": "25.0.1",
 		"playwright": "1.54.1",
 		"postcss": "8.5.6",
