--- a/components.json
+++ b/components.json
@@ -12,6 +12,6 @@
 	},
 	"aliases": {
 		"components": "@/components",
-		"utils": "@/utils/tailwindcss"
+		"utils": "@/utils/tailwind/tailwindcss"
 	}
 }
