--- a/.github/workflows/update-submodule.yaml
+++ b/.github/workflows/update-submodule.yaml
@@ -1,8 +1,8 @@
 name: update-submodules
 
 on:
-  schedule:
-    - cron: "0 23 * * 1"
+  # schedule:
+  #   - cron: "0 23 * * 1"
   workflow_dispatch:
 
 jobs:
