--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"postinstall": "pnpm prisma:generate  --schema=./s-schema/schema.prisma",
 		"storybook": "storybook dev -p 6006",
 		"storybook:build": "storybook build -o .storybook-static",
-		"license:summary": "license-checker --summary> library-license.txt",
+		"license:summary": "license-checker-rseidelsohn --summary> library-license.txt",
 		"security": "pnpm audit",
 		"analyze": "ANALYZE=true pnpm build",
 		"knip": "knip"
@@ -111,7 +111,7 @@
 		"globals": "16.3.0",
 		"jsdom": "26.1.0",
 		"knip": "5.62.0",
-		"license-checker": "25.0.1",
+		"license-checker-rseidelsohn": "4.4.2",
 		"playwright": "1.54.2",
 		"postcss": "8.5.6",
 		"remark-gfm": "4.0.1",
