--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
 		"license:summary": "license-checker-rseidelsohn --summary> library-license.txt",
 		"security": "pnpm audit",
 		"analyze": "ANALYZE=true pnpm build",
-		"knip": "knip"
+		"knip": "knip",
+		"deps:check": "depcruise src --config .dependency-cruiser.cjs  --include-only '^src'",
+		"deps:graph": "depcruise src --config .dependency-cruiser.cjs --include-only '^src' --output-type dot | dot -T svg > dependency-graph.svg",
+		"deps:circular": "depcruise src --config .dependency-cruiser.cjs  --include-only '^src' --output-type text --focus-depth 0"
 	},
 	"dependencies": {
 		"@prisma/client": "6.13.0",
@@ -99,6 +102,7 @@
 		"@vitest/browser": "3.2.4",
 		"@vitest/coverage-v8": "3.2.4",
 		"@vitest/eslint-plugin": "1.3.4",
+		"dependency-cruiser": "17.0.1",
 		"dotenv": "17.2.1",
 		"eslint": "9.33.0",
 		"eslint-config-next": "15.4.6",
