--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
 		"@storybook/addon-viewport": "9.0.8",
 		"@storybook/addon-vitest": "9.1.2",
 		"@storybook/nextjs-vite": "9.1.2",
+		"@storybook/react": "9.1.2",
 		"@storybook/test": "8.6.14",
 		"@storybook/test-runner": "0.23.0",
 		"@tailwindcss/postcss": "4.1.11",
