--- a/.github/workflows/depcruise.yaml
+++ b/.github/workflows/depcruise.yaml
@@ -15,6 +15,6 @@ jobs:
           persist-credentials: false
           submodules: true
 
-      - uses: MH4GF/dependency-cruiser-report-action@v2
+      - uses: MH4GF/dependency-cruiser-report-action@885013e37581e3472385ffa93c821b3505336bc1 #v2
         with:
             package-manager: pnpm
