--- a/.github/workflows/update-license.yaml
+++ b/.github/workflows/update-license.yaml
@@ -43,7 +43,7 @@ jobs:
       - run: pnpm i --frozen-lockfile # && npm install -g @lhci/cli@0.12.x
       - run: pnpm license:summary
       - run: bash check-license.sh
-      - run: pnpm fmt:fix
+      - run: pnpm biome:fix
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7
