--- a/biome.json
+++ b/biome.json
@@ -1,8 +1,8 @@
 {
-	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.2.0/schema.json",
 	"assist": { "actions": { "source": { "organizeImports": "on" } } },
 	"linter": {
-		"enabled": false,
+		"enabled": true,
 		"rules": {
 			"recommended": true,
 			"style": {
@@ -16,10 +16,26 @@
 				"useNumberNamespace": "error",
 				"noInferrableTypes": "error",
 				"noUselessElse": "error"
+			},
+			"suspicious": {
+				"noExplicitAny": "off",
+				"noUnknownAtRules": "off"
+			},
+			"complexity": {
+				"noUselessCatch": "off",
+				"noBannedTypes": "off"
+			},
+			"correctness": {
+				"useUniqueElementIds": "off"
+			},
+			"a11y": {
+				"useSemanticElements": "off"
 			}
 		}
 	},
-	"files": { "includes": ["**", "!**/s-schema/generated/**"] },
+	"files": {
+		"includes": ["**", "!**/s-schema/generated"]
+	},
 	"vcs": {
 		"enabled": true,
 		"clientKind": "git",
