feat: add domain modeling for contents and images

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,8 +24,7 @@
 	"cSpell.words": ["biomejs", "HSTS", "pino", "UPSERTED", "vaul"],
 	"editor.defaultFormatter": "biomejs.biome",
 	"editor.codeActionsOnSave": {
-		"quickfix.biome": "always",
-		"source.organizeImports.biome": "explicit"
+		"source.fixAll.biome": "explicit"
 	},
 	"[javascript]": {
 		"editor.defaultFormatter": "biomejs.biome"
