--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
 		"lint:inspector": "config-inspector --config eslint.config.ts",
-		"biome:ci": "biome ci *",
-		"biome:fix": "biome check --write *",
+		"biome:ci": "biome ci .",
+		"biome:fix": "biome check --write .",
 		"test": "vitest",
 		"test:e2e": "playwright test",
 		"test:storybook": "test-storybook --coverage --coverageDirectory .storybook-coverage",
