--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@vercel/speed-insights": "1.2.0",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
+		"cmdk": "1.1.1",
 		"lucide-react": "0.539.0",
 		"minio": "8.0.5",
 		"next": "15.4.6",
