chore: update deps

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
 		"biome:fix": "biome check --write .",
 		"test": "vitest",
 		"test:e2e": "playwright test",
-		"test:storybook": "test-storybook --coverage --coverageDirectory .storybook-coverage",
 		"prisma:generate": "prisma generate --no-engine --no-hints --schema=./s-schema/schema.prisma",
 		"prisma:migrate": "prisma migrate dev --schema=./s-schema/schema.prisma",
 		"prisma:deploy": "prisma migrate deploy --schema=./s-schema/schema.prisma",
@@ -78,7 +77,6 @@
 		"@storybook/addon-actions": "9.0.8",
 		"@storybook/addon-backgrounds": "9.0.8",
 		"@storybook/addon-controls": "9.0.8",
-		"@storybook/addon-coverage": "2.0.0",
 		"@storybook/addon-docs": "9.1.2",
 		"@storybook/addon-links": "9.1.2",
 		"@storybook/addon-measure": "9.0.8",
@@ -109,7 +107,7 @@
 		"eslint-plugin-react": "7.37.5",
 		"eslint-plugin-react-hooks": "5.2.0",
 		"eslint-plugin-storybook": "9.1.2",
-		"eslint-plugin-tailwindcss": "3.18.2",
+		"eslint-plugin-tailwindcss": "4.0.0-beta.0",
 		"jscpd": "4.0.5",
 		"jsdom": "26.1.0",
 		"knip": "5.62.0",
