--- a/biome.json
+++ b/biome.json
@@ -5,6 +5,7 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true,
+			"nursery": { "useSortedClasses": "warn" },
 			"style": {
 				"noParameterAssign": "error",
 				"useAsConstAssertion": "error",
