--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -106,6 +106,7 @@ jobs:
         env:
           SKIP_ENV_VALIDATION: true
           MINIO_HOST: ${{ secrets.MINIO_HOST }}
+      - run: pnpm knip
 
   test:
       runs-on: ubuntu-24.04
