--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
 		"biome:ci": "biome ci .",
 		"biome:fix": "biome check --write .",
 		"test": "vitest",
-		"prisma:generate": "prisma generate --no-engine --no-hints --schema=./s-schema/schema.prisma",
-		"prisma:migrate": "prisma migrate dev --schema=./s-schema/schema.prisma",
-		"prisma:deploy": "prisma migrate deploy --schema=./s-schema/schema.prisma",
-		"prisma:studio": "prisma studio  --schema=./s-schema/schema.prisma",
-		"postinstall": "pnpm prisma:generate  --schema=./s-schema/schema.prisma",
+		"prisma:generate": "prisma generate --no-engine --no-hints",
+		"prisma:migrate": "prisma migrate dev",
+		"prisma:deploy": "prisma migrate deploy",
+		"prisma:studio": "prisma studio",
+		"postinstall": "pnpm prisma:generate",
 		"storybook": "storybook dev -p 6006",
 		"storybook:build": "storybook build -o .storybook-static",
 		"license:summary": "license-checker-rseidelsohn --summary> library-license.txt",
