--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "s-private",
+	"name": "s-private-app",
 	"version": "9.5.2",
 	"author": "s-hirano-ist",
 	"description": "Private pages and admin tools for s-hirano-ist.",
@@ -8,6 +8,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
+		"analyze": "ANALYZE=true pnpm build",
 		"start": "next start",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
@@ -21,10 +22,7 @@
 		"storybook": "storybook dev -p 6006",
 		"storybook:build": "storybook build -o .storybook-static",
 		"license:summary": "license-checker-rseidelsohn --summary> library-license.txt",
-		"security": "pnpm audit",
-		"analyze": "ANALYZE=true pnpm build",
 		"knip": "knip",
-		"jscpd": "jscpd -p src/**/*.{ts,tsx}",
 		"deps:check": "depcruise src --config .dependency-cruiser.cjs  --include-only '^src'",
 		"deps:graph": "depcruise src --config .dependency-cruiser.cjs --include-only '^src' --output-type dot | dot -T svg > dependency-graph.svg",
 		"deps:circular": "depcruise src --config .dependency-cruiser.cjs  --include-only '^src' --output-type text --focus-depth 0"
@@ -101,11 +99,9 @@
 		"eslint-plugin-react-hooks": "5.2.0",
 		"eslint-plugin-storybook": "9.1.7",
 		"eslint-plugin-tailwindcss": "4.0.0-beta.0",
-		"jscpd": "4.0.5",
 		"jsdom": "27.0.0",
 		"knip": "5.63.1",
 		"license-checker-rseidelsohn": "4.4.2",
-		"playwright": "1.55.0",
 		"postcss": "8.5.6",
 		"remark-gfm": "4.0.1",
 		"storybook": "9.1.7",
