--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -89,47 +89,47 @@ jobs:
       - run: pnpm knip
 
   test:
-      runs-on: ubuntu-24.04
-      permissions:
-        pull-requests: write
-      timeout-minutes: 20
-      concurrency:
-        group: ${{ github.workflow }}-test-${{ github.ref }}
-      steps:
-        - name: Checkout files
-          uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
-          with:
-            persist-credentials: false
-            submodules: true
+    runs-on: ubuntu-24.04
+    permissions:
+      pull-requests: write
+    timeout-minutes: 20
+    concurrency:
+      group: ${{ github.workflow }}-test-${{ github.ref }}
+    steps:
+      - name: Checkout files
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+        with:
+          persist-credentials: false
+          submodules: true
 
-        - name: Install pnpm
-          uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4
-          with:
-            run_install: false
+      - name: Install pnpm
+        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4
+        with:
+          run_install: false
 
-        - name: Install Node.js
-          uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v5
-          with:
-            node-version: "24.8.0"
-            cache: pnpm
-            cache-dependency-path: pnpm-lock.yaml
+      - name: Install Node.js
+        uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v5
+        with:
+          node-version: "24.8.0"
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
 
-        - name: Get pnpm directory
-          shell: bash
-          run: |
-            echo "STORE_PATH=$(pnpm store path --silent)" >> "$GITHUB_ENV"
+      - name: Get pnpm directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> "$GITHUB_ENV"
 
-        - run: pnpm i --frozen-lockfile
-        - run: pnpm exec playwright install
-        - run: pnpm test
-          env:
-            MINIO_HOST: ${{secrets.MINIO_HOST}}
-        - name: Show coverage
-          if: always()
-          uses: davelosert/vitest-coverage-report-action@8ab049ff5a2c6e78f78af446329379b318544a1a # v2
-          with:
-            json-summary-path: ./.vitest-coverage/coverage-summary.json
-            json-final-path: ./.vitest-coverage/coverage-final.json
+      - run: pnpm i --frozen-lockfile
+      - run: pnpm exec playwright install
+      - run: pnpm test
+        env:
+          MINIO_HOST: ${{secrets.MINIO_HOST}}
+      - name: Show coverage
+        if: always()
+        uses: davelosert/vitest-coverage-report-action@8ab049ff5a2c6e78f78af446329379b318544a1a # v2
+        with:
+          json-summary-path: .app/.vitest-coverage/coverage-summary.json
+          json-final-path: .app/.vitest-coverage/coverage-final.json
 
   storybook:
     runs-on: ubuntu-24.04
