--- a/packages/domains/package.json
+++ b/packages/domains/package.json
@@ -5,7 +5,10 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "tsc",
-		"test": "vitest"
+		"test": "vitest",
+		"deps:check": "depcruise . --config .dependency-cruiser.cjs  --include-only '^src'",
+		"deps:graph": "depcruise . --config .dependency-cruiser.cjs --output-type dot | dot -T svg > dependency-graph.svg",
+		"deps:circular": "depcruise . --config .dependency-cruiser.cjs  --include-only '^src' --output-type text --focus-depth 0"
 	},
 	"dependencies": {
 		"sharp": "0.34.4",
@@ -14,6 +17,7 @@
 	},
 	"devDependencies": {
 		"@vitest/coverage-v8": "3.2.4",
+		"dependency-cruiser": "17.0.1",
 		"typescript": "5.9.2",
 		"vitest": "3.2.4"
 	}
