chore: update renovate configuration and fix formatting in depcruise workflow

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -9,6 +9,7 @@
     'config:best-practices',
     ':semanticCommitTypeAll(chore)',
     'customManagers:biomeVersions',
+    ':enableVulnerabilityAlertsWithLabel(security)',
   ],
   reviewers: [
     's-hirano-ist',
