--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"scripts": {
 		"dev": "pnpm --recursive dev",
 		"build": "pnpm --recursive build",
+		"clean": "rm -rf app/node_modules app/.next app/dist packages/*/node_modules packages/*/dist",
 		"biome:ci": "biome ci .",
 		"biome:fix": "biome check --write .",
 		"lint": "pnpm --recursive lint",
