--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -26,8 +26,8 @@
 		"next": "15.5.3",
 		"next-themes": "0.4.6",
 		"radix-ui": "1.4.3",
-		"react": "19.1.1",
-		"react-dom": "19.1.1",
+		"react": "19.2.0",
+		"react-dom": "19.2.0",
 		"react-markdown": "10.1.0",
 		"react-syntax-highlighter": "15.6.6",
 		"remark-gfm": "4.0.1",
@@ -36,13 +36,15 @@
 		"vaul": "1.1.2"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "6.9.1",
 		"@testing-library/react": "16.3.0",
-		"@vitest/browser": "3.2.4",
-		"@vitest/coverage-v8": "3.2.4",
-		"@vitest/eslint-plugin": "1.3.12",
 		"@types/react": "19.1.13",
 		"@types/react-dom": "19.1.9",
 		"@types/react-syntax-highlighter": "15.5.13",
+		"@vitest/browser": "3.2.4",
+		"@vitest/coverage-v8": "3.2.4",
+		"@vitest/eslint-plugin": "1.3.12",
+		"jsdom": "27.0.0",
 		"typescript": "5.9.2",
 		"vitest": "3.2.4"
 	}
