--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"license:summary": "pnpm --recursive license:summary",
 		"security": "pnpm audit",
 		"jscpd": "jscpd -p app/src/**/*.{ts,tsx}",
-		"knip": "pnpm --filter s-private-app knip",
+		"knip": "knip",
 		"storybook": "storybook dev -p 6006",
 		"storybook:build": "storybook build -o .storybook-static",
 		"deps:check": "pnpm -r deps:check",
@@ -46,6 +46,7 @@
 		"@tailwindcss/postcss": "4.1.13",
 		"@vitest/coverage-v8": "3.2.4",
 		"jscpd": "4.0.5",
+		"knip": "5.64.2",
 		"playwright": "1.56.0",
 		"storybook": "9.1.10",
 		"tailwindcss": "4.1.13",
