--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,6 @@
 		"prisma:studio": "prisma studio",
 		"postinstall": "pnpm prisma:generate",
 		"license:summary": "license-checker-rseidelsohn --summary> library-license.txt",
-		"knip": "knip",
 		"deps:check": "depcruise src --config .dependency-cruiser.cjs  --include-only '^src'",
 		"deps:graph": "depcruise src --config .dependency-cruiser.cjs --include-only '^src' --output-type dot | dot -T svg > dependency-graph.svg",
 		"deps:circular": "depcruise src --config .dependency-cruiser.cjs  --include-only '^src' --output-type text --focus-depth 0"
@@ -27,7 +26,6 @@
 	"dependencies": {
 		"@prisma/client": "6.16.2",
 		"@prisma/extension-accelerate": "2.0.2",
-		"@radix-ui/react-icons": "1.3.2",
 		"@sentry/nextjs": "10.17.0",
 		"@t3-oss/env-nextjs": "0.13.8",
 		"@tailwindcss/typography": "0.5.18",
@@ -41,7 +39,6 @@
 		"next-themes": "0.4.6",
 		"pino": "9.13.1",
 		"prisma": "6.16.2",
-		"radix-ui": "1.4.3",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
 		"react-markdown": "10.1.0",
@@ -78,8 +75,8 @@
 		"eslint-plugin-storybook": "9.1.7",
 		"eslint-plugin-tailwindcss": "4.0.0-beta.0",
 		"jsdom": "27.0.0",
-		"knip": "5.64.2",
 		"license-checker-rseidelsohn": "4.4.2",
+		"postcss": "8.5.6",
 		"tailwindcss": "4.1.13",
 		"typescript-eslint": "8.46.0",
 		"vitest": "3.2.4"
