--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -17,7 +17,6 @@
 		"build": "tsc"
 	},
 	"dependencies": {
-		"@radix-ui/react-icons": "1.3.2",
 		"@tailwindcss/typography": "0.5.18",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
@@ -45,6 +44,7 @@
 		"@vitest/coverage-v8": "3.2.4",
 		"@vitest/eslint-plugin": "1.3.12",
 		"jsdom": "27.0.0",
+		"postcss": "8.5.6",
 		"typescript": "5.9.2",
 		"vitest": "3.2.4"
 	}
