--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -128,8 +128,8 @@ jobs:
         if: always()
         uses: davelosert/vitest-coverage-report-action@8ab049ff5a2c6e78f78af446329379b318544a1a # v2
         with:
-          json-summary-path: ./app/.vitest-coverage/coverage-summary.json
-          json-final-path: ./app/.vitest-coverage/coverage-final.json
+          json-summary-path: ./.vitest-coverage/coverage-summary.json
+          json-final-path: ./.vitest-coverage/coverage-final.json
 
   storybook:
     runs-on: ubuntu-24.04
