--- a/app/package.json
+++ b/app/package.json
@@ -18,10 +18,7 @@
 		"prisma:deploy": "prisma migrate deploy",
 		"prisma:studio": "prisma studio",
 		"postinstall": "pnpm prisma:generate",
-		"license:summary": "license-checker-rseidelsohn --summary> library-license.txt",
-		"deps:check": "depcruise src --config .dependency-cruiser.cjs  --include-only '^src'",
-		"deps:graph": "depcruise src --config .dependency-cruiser.cjs --include-only '^src' --output-type dot | dot -T svg > dependency-graph.svg",
-		"deps:circular": "depcruise src --config .dependency-cruiser.cjs  --include-only '^src' --output-type text --focus-depth 0"
+		"license:summary": "license-checker-rseidelsohn --summary> library-license.txt"
 	},
 	"dependencies": {
 		"@prisma/client": "6.16.2",
@@ -66,7 +63,6 @@
 		"@vitest/browser": "3.2.4",
 		"@vitest/coverage-v8": "3.2.4",
 		"@vitest/eslint-plugin": "1.3.12",
-		"dependency-cruiser": "17.0.1",
 		"eslint": "9.37.0",
 		"eslint-config-next": "15.5.3",
 		"eslint-plugin-jsx-a11y": "6.10.2",
