--- a/packages/domains/package.json
+++ b/packages/domains/package.json
@@ -4,10 +4,7 @@
 	"description": "",
 	"scripts": {
 		"build": "tsc",
-		"test": "vitest",
-		"deps:check": "depcruise . --config .dependency-cruiser.cjs  --include-only '^src'",
-		"deps:graph": "depcruise . --config .dependency-cruiser.cjs --output-type dot | dot -T svg > dependency-graph.svg",
-		"deps:circular": "depcruise . --config .dependency-cruiser.cjs  --include-only '^src' --output-type text --focus-depth 0"
+		"test": "vitest"
 	},
 	"dependencies": {
 		"sharp": "0.34.4",
@@ -16,7 +13,6 @@
 	},
 	"devDependencies": {
 		"@vitest/coverage-v8": "3.2.4",
-		"dependency-cruiser": "17.0.1",
 		"typescript": "5.9.2",
 		"vitest": "3.2.4"
 	}
