--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
 		"test:components": "vitest run --project components",
 		"test:domains": "vitest run --project domains",
 		"test:watch": "vitest",
-		"test:all": "pnpm test && pnpm --filter s-private-app test:typecheck",
-		"test:typecheck": "pnpm --filter s-private-app test:typecheck",
 		"license:summary": "pnpm --recursive license:summary",
 		"security": "pnpm audit",
 		"jscpd": "jscpd -p app/src/**/*.{ts,tsx}",
@@ -47,6 +45,7 @@
 		"@vitest/coverage-v8": "3.2.4",
 		"dependency-cruiser": "17.0.1",
 		"jscpd": "4.0.5",
+		"jsdom": "27.0.0",
 		"knip": "5.64.2",
 		"playwright": "1.56.0",
 		"storybook": "9.1.10",
