--- a/packages/domains/package.json
+++ b/packages/domains/package.json
@@ -3,8 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"scripts": {
-		"build": "tsc",
-		"test": "vitest"
+		"build": "tsc"
 	},
 	"dependencies": {
 		"sharp": "0.34.4",
@@ -12,7 +11,6 @@
 		"zod": "4.1.9"
 	},
 	"devDependencies": {
-		"typescript": "5.9.2",
-		"vitest": "3.2.4"
+		"typescript": "5.9.2"
 	}
 }
