--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,6 @@
 		"build": "next build",
 		"analyze": "ANALYZE=true pnpm build",
 		"start": "next start",
-		"lint": "eslint .",
-		"lint:fix": "eslint . --fix",
-		"lint:inspector": "config-inspector --config eslint.config.ts",
-		"test": "vitest",
 		"prisma:generate": "prisma generate --no-engine",
 		"prisma:migrate": "prisma migrate dev",
 		"prisma:deploy": "prisma migrate deploy",
@@ -48,31 +44,14 @@
 		"zod": "4.1.9"
 	},
 	"devDependencies": {
-		"@chromatic-com/storybook": "4.1.1",
-		"@eslint/config-inspector": "1.3.0",
-		"@eslint/eslintrc": "3.3.1",
 		"@next/bundle-analyzer": "15.5.3",
 		"@tailwindcss/postcss": "4.1.13",
-		"@testing-library/jest-dom": "6.9.1",
-		"@testing-library/react": "16.3.0",
-		"@testing-library/user-event": "14.6.1",
 		"@types/node": "22.18.6",
 		"@types/react": "19.2.0",
 		"@types/react-dom": "19.2.0",
 		"@types/react-syntax-highlighter": "15.5.13",
-		"@vitest/browser": "3.2.4",
-		"@vitest/eslint-plugin": "1.3.12",
-		"eslint": "9.37.0",
-		"eslint-config-next": "15.5.3",
-		"eslint-plugin-jsx-a11y": "6.10.2",
-		"eslint-plugin-react": "7.37.5",
-		"eslint-plugin-react-hooks": "5.2.0",
-		"eslint-plugin-storybook": "9.1.7",
-		"eslint-plugin-tailwindcss": "4.0.0-beta.0",
 		"license-checker-rseidelsohn": "4.4.2",
 		"postcss": "8.5.6",
-		"tailwindcss": "4.1.13",
-		"typescript-eslint": "8.46.0",
-		"vitest": "3.2.4"
+		"tailwindcss": "4.1.13"
 	}
 }
