--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 		"clean": "rm -rf app/node_modules app/.next packages/*/node_modules packages/*/dist",
 		"biome:ci": "biome ci .",
 		"biome:fix": "biome check --write .",
-		"lint": "pnpm --recursive lint",
-		"lint:fix": "pnpm --recursive lint:fix",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
+		"lint:inspector": "config-inspector --config eslint.config.ts",
 		"test": "vitest run",
 		"test:app": "vitest run --project app",
 		"test:components": "vitest run --project components",
@@ -35,6 +36,8 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.2.4",
 		"@chromatic-com/storybook": "4.1.1",
+		"@eslint/config-inspector": "1.3.0",
+		"@eslint/eslintrc": "3.3.1",
 		"@storybook/addon-a11y": "9.1.10",
 		"@storybook/addon-docs": "9.1.10",
 		"@storybook/addon-links": "9.1.10",
@@ -42,8 +45,20 @@
 		"@storybook/addon-vitest": "9.1.10",
 		"@storybook/nextjs-vite": "9.1.10",
 		"@tailwindcss/postcss": "4.1.13",
+		"@testing-library/jest-dom": "6.9.1",
+		"@testing-library/react": "16.3.0",
+		"@testing-library/user-event": "14.6.1",
+		"@vitest/browser": "3.2.4",
 		"@vitest/coverage-v8": "3.2.4",
+		"@vitest/eslint-plugin": "1.3.12",
 		"dependency-cruiser": "17.0.1",
+		"eslint": "9.37.0",
+		"eslint-config-next": "15.5.3",
+		"eslint-plugin-jsx-a11y": "6.10.2",
+		"eslint-plugin-react": "7.37.5",
+		"eslint-plugin-react-hooks": "5.2.0",
+		"eslint-plugin-storybook": "9.1.7",
+		"eslint-plugin-tailwindcss": "4.0.0-beta.0",
 		"jscpd": "4.0.5",
 		"jsdom": "27.0.0",
 		"knip": "5.64.2",
@@ -51,6 +66,7 @@
 		"storybook": "9.1.10",
 		"tailwindcss": "4.1.13",
 		"typescript": "5.9.2",
+		"typescript-eslint": "8.46.0",
 		"vitest": "3.2.4"
 	}
 }
