--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -35,15 +35,10 @@
 		"vaul": "1.1.2"
 	},
 	"devDependencies": {
-		"@testing-library/jest-dom": "6.9.1",
-		"@testing-library/react": "16.3.0",
 		"@types/react": "19.1.13",
 		"@types/react-dom": "19.1.9",
 		"@types/react-syntax-highlighter": "15.5.13",
-		"@vitest/browser": "3.2.4",
-		"@vitest/eslint-plugin": "1.3.12",
 		"postcss": "8.5.6",
-		"typescript": "5.9.2",
-		"vitest": "3.2.4"
+		"typescript": "5.9.2"
 	}
 }
