feat: update license summary and add license checker script

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"test:components": "vitest run --project components",
 		"test:domains": "vitest run --project domains",
 		"test:watch": "vitest",
-		"license:summary": "pnpm --recursive license:summary",
+		"license:summary": "echo '=== Root dependencies ===' > library-license.txt && license-checker-rseidelsohn --start . --summary >> library-license.txt && echo '\n=== App package ===' >> library-license.txt && license-checker-rseidelsohn --start ./app --summary >> library-license.txt && echo '\n=== Components package ===' >> library-license.txt && license-checker-rseidelsohn --start ./packages/components --summary >> library-license.txt && echo '\n=== Domains package ===' >> library-license.txt && license-checker-rseidelsohn --start ./packages/domains --summary >> library-license.txt",
 		"security": "pnpm audit",
 		"jscpd": "jscpd",
 		"knip": "knip",
@@ -66,6 +66,7 @@
 		"jscpd": "4.0.5",
 		"jsdom": "27.0.0",
 		"knip": "5.64.2",
+		"license-checker-rseidelsohn": "4.4.2",
 		"playwright": "1.56.0",
 		"storybook": "9.1.10",
 		"tailwindcss": "4.1.13",
