--- a/app/package.json
+++ b/app/package.json
@@ -13,8 +13,7 @@
 		"prisma:migrate": "prisma migrate dev",
 		"prisma:deploy": "prisma migrate deploy",
 		"prisma:studio": "prisma studio",
-		"postinstall": "pnpm prisma:generate",
-		"license:summary": "license-checker-rseidelsohn --summary> library-license.txt"
+		"postinstall": "pnpm prisma:generate"
 	},
 	"dependencies": {
 		"@prisma/client": "6.17.0",
@@ -50,7 +49,6 @@
 		"@types/react": "19.2.0",
 		"@types/react-dom": "19.2.0",
 		"@types/react-syntax-highlighter": "15.5.13",
-		"license-checker-rseidelsohn": "4.4.2",
 		"postcss": "8.5.6",
 		"tailwindcss": "4.1.13"
 	}
