feat: update license summary and add license checker script

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
 		"test:domains": "vitest run --project domains",
 		"test:watch": "vitest",
 		"license:summary": "echo '=== Root dependencies ===' > library-license.txt && license-checker-rseidelsohn --start . --summary >> library-license.txt && echo '\n=== App package ===' >> library-license.txt && license-checker-rseidelsohn --start ./app --summary >> library-license.txt && echo '\n=== Components package ===' >> library-license.txt && license-checker-rseidelsohn --start ./packages/components --summary >> library-license.txt && echo '\n=== Domains package ===' >> library-license.txt && license-checker-rseidelsohn --start ./packages/domains --summary >> library-license.txt",
-		"security": "pnpm audit",
+		"security": "pnpm audit --audit-level=moderate",
+		"security:fix": "pnpm audit --fix",
+		"security:report": "pnpm audit --json > security-audit.json",
 		"jscpd": "jscpd",
 		"knip": "knip",
 		"storybook": "storybook dev -p 6006",
